--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         </a>
 
         <a href="https://stackexchange.com/users/12714138/william-nolan" target="_blank">
-            <img class="icon" src="images/stackoverflow-128.png" alt="Stackoverflow Icon">
+            <img class="iconb" src="images/stackoverflow-128.png" alt="Stackoverflow Icon">
         </a>
 
     </div>
