--- a/contact.html
+++ b/contact.html
@@ -45,13 +45,13 @@
         <h2>Connect with Me
         </h2>
         <a href="https://github.com/will-nolan27" target="_blank">
-            <img class="icon" src="images/github-128.png" alt="Github Icon">
+            <img class="icon" src="images/github-128.png"  alt="Github Icon">
         </a>
         <a href="https://www.linkedin.com/in/will-nolan-374174151/" target="_blank">
-            <img class="icon" src="images/linkedin-128.png" alt="Linkedin Icon">
+            <img class="icon" src="images/linkedin-128.png"  alt="Linkedin Icon">
         </a>
         <a href="https://stackexchange.com/users/12714138/william-nolan" target="_blank">
-            <img class="icon" src="images/stackoverflow-128.png" alt="Stackoverflow Icon">
+            <img class="iconb" src="images/stackoverflow-128.png"  alt="Stackoverflow Icon">
         </a>
     </div>
    
